manifests/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\Documents\bin\kompose-windows-amd64.exe convert -f .\docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: ratings
  name: ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ratings
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/test: "true"
        io.kompose.service: ratings
    spec:
      containers:
        - env:
            - name: DB_URL
              value: host=postgresdb port=5432 password=password user=postgres dbname=service sslmode=disable
          image: colibristn/ratingservice
          name: ratings
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
