manifests/05-schedule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colibris-schedule-deploy
  namespace: colibris
  labels:
    projectName: colibris
spec:
  strategy: 
    type: RollingUpdate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      run: colibris-schedule
  replicas: 1
  template:
    metadata:
      labels:
        run: colibris-schedule
    spec:
    # nodeSelector:
      #   community: colibris
      containers:       
      - name: schedule
        image: colibristn/schedule:v0.2.2
        ports:
          - containerPort: 5000
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "5m"
            memory: "10Mi"    
---
apiVersion: v1
kind: Service
metadata:
  name: colibris-schedule-svc
  labels:
    projectName: colibris
  namespace: colibris
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    run: colibris-schedule
