manifests/09-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: colibris
  name: colibris-dashboard-deploy
  labels:
    projectName: colibris
spec:
  selector:
    matchLabels:
      run: colibris-dashboard
  replicas: 1
  strategy: 
    type: RollingUpdate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        run: colibris-dashboard
    spec:
      # nodeSelector:
      #   host: colibris
        
      containers:
      - name: adminui
        image: colibristn/adminui:v0.1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "5m"
            memory: "10Mi"  
        volumeMounts:
          - name: colibris-config-volume
            mountPath: /usr/share/nginx/html/config
      volumes:
      - name: colibris-config-volume
        configMap:
          name: colibris-configmap
          items:
            - key: CUSTOMER_config.js
              path: config.js
            - key: USER_SERVICE_URI
              path: USER_SERVICE_URI
            - key: APPOINT_SERVICE_URI
              path: APPOINT_SERVICE_URI
            - key: ZONE_SERVICE_URI
              path: ZONE_SERVICE_URI
            - key: GOOGLE_API_KEY
              path: GOOGLE_API_KEY
            - key: ADMIN_SERVICE_URI
              path: ADMIN_SERVICE_URI
---
apiVersion: v1
kind: Service
metadata:
  namespace: colibris
  name: colibris-dashboard-svc
  labels:
    projectName: colibris
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: colibris-dashboard
