manifests/appointservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointservice
spec:
  selector:
    matchLabels:
      run: appointservice
  replicas: 1
  template:
    metadata:
      labels:
        run: appointservice
    spec:
      containers:
      - name: appointservice
        image: colibristn/appointservice:v0.1.1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: appointservice
  labels:
    run: appointservice
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    run: appointservice
