manifests/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
#  namespace: colibris
  name: colibris-dashboard-deploy
  labels:
    project: colibris
spec:
  selector:
    matchLabels:
      app: colibris-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: colibris-dashboard
        project: colibris
    spec:
      containers:
      - name: dashboard
        image: colibristn/adminui:v0.1.0
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config
            mountPath: /usr/share/nginx/html/config.js
           
      volumes:
      - name: config
        configMap:
          name: colibris-configmap

---
apiVersion: v1
kind: Service
metadata:
#  namespace: colibris
  name: colibris-dashboard-svc
  labels:
    project: colibris
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: colibris-dashboard
