manifests/db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    name: mongo
    app: colibris
spec:
      containers:
      - image: mongo
        name: mongo
        ports:
        - name: mongo
          containerPort: 27017
          hostPort: 27017
        volumeMounts:
          - name: mongo-storage
            mountPath: /data/db
      volumes:
          - name: mongo-storage
            emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: mongo
    app: colibris
spec:
  selector:
    name: mongo
  type: ClusterIP
  ports:
    - name: db
      port: 27017
      targetPort: 27017
