manifests/index.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #namespace: colibris
  name: colibris-index-deploy
spec:
  selector:
    matchLabels:
      app: colibris-index
  replicas: 1
  template:
    metadata:
      labels:
        app: colibris-index
        project: colibris
    spec:
      containers:
      - name: customerui
        image: colibristn/customerui:v0.2.4
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config
            mountPath: /usr/share/nginx/html/config.js
            
      volumes:
      - name: config
        configMap:
          name: colibris-configmap

---
apiVersion: v1
kind: Service
metadata:
  # namespace: colibris
  name: colibris-index-svc
  labels:
    project: colibris
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: colibris-index
