manifests/ratings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: colibris-ratings-deploy
   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colibris-ratings-deploy 
  template:
    metadata:
      labels:
        project: colibris
        app: colibris-ratings-deploy
    spec:
      volumes:
        - name: colibris-ratings-db-pv
          persistentVolumeClaim:
            claimName: colibris-ratings-pvc
      containers:
        - image: colibristn/ratingservice
          name: ratings
          volumeMounts:
            - mountPath: /data
              name: colibris-ratings-db-pv
          ports:
            - containerPort: 3000
          
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: colibris-ratings-deploy
  name: colibris-ratings-svc
spec:
  ports:
    - name: rating
      port: 3000
      targetPort: 3000
  selector:
    app: colibris-ratings-deploy
