manifests/schedule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colibris-schedule-deploy
#  namespace: colibris
spec:
  selector:
    matchLabels:
      app: colibris-schedule
  replicas: 1
  template:
    metadata:
      labels:
        app: colibris-schedule
        project: colibris
    spec:
      containers:
      - name: schedule
        image: colibristn/schedule:v0.2.2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: colibris-schedule-svc
  labels:
    project: colibris
#  namespace: colibris
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: colibris-schedule
