manifests/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colibris-user-deploy
 # namespace: colibris
  labels:
    project: colibris
spec:
  selector:
    matchLabels:
      app: colibris-user
  replicas: 1
  template:
    metadata:
      labels:
        app: colibris-user
        project: colibris
    spec:
      containers:
      - name: user
        image: colibristn/user:v0.2.2
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: colibris-user-svc
 # namespace: colibris
  labels:
    project: colibris
spec:
  ports:
  - port: 5001
    protocol: TCP
  selector:
    app: colibris-user
