manifests/userService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  selector:
    matchLabels:
      run: userservice
  replicas: 1
  template:
    metadata:
      labels:
        run: userservice
    spec:
      containers:
      - name: userservice
        image: colibristn/userservice:v0.1.1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    run: userservice
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    run: userservice
