manifests/zone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zone
  namespace: colibris
spec:
  selector:
    matchLabels:
      app: colibris
      service: zone
  replicas: 1
  template:
    metadata:
      labels:
        app: colibris
        service: zone
    spec:
      containers:
      - name: zone
        image: colibristn/zone:v0.2.2
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: zone
  labels:
    app: colibris
  namespace: colibris
spec:
  ports:
  - port: 5002
    protocol: TCP
  selector:
    app: colibris
