manifests/08-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colibris-backend-ingress
  namespace: colibris
  labels:
    projectName: colibris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/server-alias: "colibris.creometry.dev"
spec:
  tls:
    - hosts:
        - colibristunisie.com
        - colibris.creometry.dev
        - www.colibristunisie.com
      secretName: colibris-ingress-secret
  rules:
    - host: colibristunisie.com
      http:
        paths:
          - path: /users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-user-svc
                port:
                  number: 5001
          - path: /appointments(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-schedule-svc
                port:
                  number: 5000
          - path: /ratings(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-ratings-svc
                port:
                  number: 3000
          - path: /zone(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-zone-svc
                port:
                  number: 5002        
          - path: /admin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-admin-svc
                port:
                  number: 5000            
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colibris-web-ingress
  namespace: colibris
  labels:
    projectName: colibris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: "colibris.creometry.dev"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - colibris.creometry.dev
    - colibristunisie.com
    - www.colibristunisie.com
    - admincolibris.com
    secretName: colibris-ingress-secret
  rules:
    - host: colibristunisie.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: colibris-web-svc
              port:
                number: 80
    - host: admincolibris.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: colibris-dashboard-svc
              port:
                number: 80
