manifests/colibris-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colibris-backend-ingress
  namespace: colibris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/server-alias: "colibristunisie.com"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - colibristunisie.com
        - colibris.creometry.dev
      secretName: colibris-ingress-secret
  rules:
    - host: colibris.creometry.dev
      http:
        paths:
          - path: /users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-user-svc
                port:
                  number: 5001
          - path: /appointments(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-appointment-svc
                port:
                  number: 5000
          - path: /ratings(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ratings
                port:
                  number: 3000
          - path: /zone(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-zone-svc
                port:
                  number: 5002
