manifests/ingress-colibris-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colibris-ingress-backend
 # namespace: colibris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
   # nginx.ingress.kubernetes.io/server-alias: "colibristunisie.com,www.colibristunisie.com,colibris.tn,www.colibris.tn"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - test-colibris.creometry.dev
      secretName: colibris-ingress-secret
  rules:
    - host: test-colibris.creometry.dev
      http:
        paths:
          - path: /users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-user-svc
                port:
                  number: 5001
          - path: /appointments(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: colibris-schedule-svc
                port:
                  number: 5000
