manifests/ingress-services.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: colibris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - colibris.creometry.dev
      secretName: test
  rules:
    - host: colibris.creometry.dev
      http:
        paths:
          - path: /users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 5001
          - path: /appointments(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: appointment
                port:
                  number: 5000
          - path: /ratings(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ratings
                port:
                  number: 3000
          - path: /zone(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: zone
                port:
                  number: 5002
