manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: colibris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - colibris.creometry.dev
    - dashboard.colibris.creometry.dev
    secretName: test
  rules:
  - host: colibris.creometry.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: index
            port:
              number: 80
  - host: dashboard.colibris.creometry.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 80
